[package]
name = "exotic-primitives-vrf-team-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "3.0.0"
schnorrkel = { version = "0.10.2", features = [
    "preaudit_deprecated",
    "u64_backend",
    "std",
] }
